<resources>
    <string name="app_name">FunForLabels App</string>
    <string name="usuario">USUARIO:</string>
    <string name="usuarioHint">Usuario</string>
    <string name="contrasenia">CONTRASEÑA:</string>
    <string name="contraseniaHint">Contraseña</string>
    <string name="recordarPsw">Recordar Ingreso</string>
    <string name="cancelar">Cancelar</string>
    <string name="loginLabel">Ingresar</string>
    <string name="login_error">Los datos del usuario o contraseña son incorrectos.</string>
    <string name="conexion_server_error">Problemas para conectarse con el Servidor de datos.</string>
    <string name="login_progress">Intento de logueo...</string>
    <string name="atencion">Atención!</string>

    <string name="soy_cliente_title">░ Soy Cliente!</string>
    <string name="bienvenido_title">Bienvenido a FunForLabels App</string>
    <string name="no_soy_cliente_title">░ No sos Cliente?</string>
    <string name="crear_cuenta_title"><![CDATA[Crear Cuenta]]></string>
    <string name="olvidaste_contrasenia_title">░ Olvidaste tu contraseña?</string>
    <string name="presione_aqui_title"><![CDATA[Recuperar Contraseña]]></string>
    <string name="title_nueva_contrasenia">Nueva Contraseña</string>
    <string name="send_mail_error">No es posible mandar el mail con la nueva contraseña.</string>
    <string name="send_mail_succes">La nueva contraseña fue envía a la cuenta:</string>
    <string name="mensaje_enviar_contrasenia"><![CDATA[Se enviará una nueva contraseña a la cuenta de mail <]]></string>
    <string name="usuario_inexistente">"No existe usuario registrado con esta cuenta de mail! "</string>
    <string name="label_si">SI</string>
    <string name="label_no">NO</string>
    <string name="mensaje_desea_continuar"><![CDATA[> Desea continuar?]]></string>
    <string name="customer_not_exists">No existe Cliente registrado con esta cuenta!</string>
    <string name="body1_nueva_contrasenia">La nueva contraseña generada para la cuenta de Fun for Labels es:</string>
    <string name="body2_nueva_contrasenia">Recuerde modificarla al iniciar sesión.</string>
    <string name="sending_mail_progress">Enviando información a su cuenta de correo...</string>
    <string name="informacion_personal_title">░ Información Personal</string>
    <string name="direccion_title">░ Dirección</string>
    <string name="informacion_contacto_title">░ Información de Contacto</string>
    <string name="contrasenia_title">░ Contraseña</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="email">Email:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="direccion">Dirección:</string>
    <string name="barrio">Barrio:</string>
    <string name="codigo_postal">CP:</string>
    <string name="provincia">Provincia:</string>
    <string name="localidad">Localidad:</string>
    <string name="loading_data">Cargando datos...</string>
    <string name="partido">Partido:</string>
    <string name="telefono">Teléfono:</string>
    <string name="fax">Fax:</string>
    <string name="confirmacion">Confirmación:</string>
    <string name="contraseñaLabel">Contraseña:</string>
    <string name="newsletter">Newsletter</string>
    <string name="registrarLabel">Guardar</string>
    <string name="campoRequerido">*</string>
    <string name="password_not_equal_error">La Contraseña y la Confirmación no coinciden!</string>
    <string name="info_required_hint">Dato Requerido</string>
    <string name="creating_customer_progress">Creando nueva Cuenta...</string>
    <string name="exists_customer">Ya existe un Cliente asociado a la cuenta de mail ingresada!</string>
    <string name="create_customer_success">Se creó el Cliente con éxito!</string>
    <string name="create_customer_error">Problemas al registrar la cuenta del Cliente</string>
    <string name="campo_mayor_dos_requerido">Este campo requiere al menos dos caracteres!</string>
    <string name="campo_mail_no_valido">El mail ingresado no es de un formato válido!</string>
    <string name="campo_mayor_cinco_requerido">Este campo requiere al menos 5 caracteres!</string>
    <string name="wellcomeUser">Bienvenid@</string>
    <string name="diseniosPrearmadosTitle">Nuestros diseños prearmados!</string>
    <string name="price">$</string>
    <string name="quantity">Cantidad:</string>
    <string name="per_pack"> por pack</string>
    <string name="your_name_here">Ingreso un texto</string>
    <string name="select_font_style">Elija su letra...</string>
    <string name="select_tag_style">Elija su estilo...</string>
    <string name="your_title">Ingrese un título</string>
    <string name="culminarTag">Agregar al carrito</string>
    <string name="enter_comment">Ingrese un comentario...</string>
    <string name="agregar_tag_acarrito">Agregar</string>
    <string name="tag_agregado_carrito">El producto fue agregado al carrito!</string>
    <string name="su_carrito">Su Carrito!</string>
    <string name="confirmar_carrito">Comprar</string>
    <string name="mensaje_borrar_producto_carrito">Está seguro de eliminar este item de su Carrito?</string>
    <string name="establecer_pago">Forma de Pago</string>
    <string name="direccion_envio_title">░ DIRECCION DE ENVIO</string>
    <string name="titulo_envio">INFORMACION DE ENVIO</string>
    <string name="metodo_envio_title">░ METODOS DE ENVIO</string>
    <string name="no_agrego_al_carrito">No agregaste ningún producto al carrito.</string>
    <string name="titulo_pago">INFORMACION DE PAGO</string>
    <string name="metodo_pago_title">░ FORMAS DE PAGO</string>
    <string name="confirmar_datos">CONFIRMAR DATOS</string>
    <string name="detalle_compra">DETALLE DE SU COMPRA</string>
    <string name="forma_pago_title">░ FORMA DE PAGO</string>
    <string name="finalizar_compra">Efectuar Compra</string>
    <string name="forma_envio_title">░ FORMA DE ENVIO</string>
    <string name="label_total_etiquetas">Total en etiquetas:</string>
    <string name="label_total">Total a pagar:</string>
    <string name="volver">Volver</string>
    <string name="enviar_mail">Email</string>
    <string name="enviar_wsp" translatable="false">Whatsapp</string>
    <string name="solicito_envio_cbu">Solicito envío CBU</string>
    <string name="solicito_envio_cbu_detalle">Solicito que me envien su nro de CBU para poder efectivizar la compra. Gracias!</string>
    <string name="cancelo_compra">Ha cancelado su compra! Dejaremos su carrito con los productos en el caso de que desee realizarla en otro momento.</string>
    <string name="cancelacion_compra">COMPRA CANCELADA:</string>
    <string name="estado_compra">Estado de la compra:</string>
    <string name="menu_acerca_de">Acerca de...</string>
    <string name="cerrar_session">Salir</string>
    <string name="envio_devoluciones">░ Formas de envío</string>
    <string name="politica_privacidad">░ Nuestra Política de privacidad</string>
    <string name="condiciones_uso">░ Condiciones de uso</string>
    <string name="formas_pago">░ Formas de pago</string>
    <string name="preguntas_frecuentes">░ Preguntas frecuentes</string>
    <string name="quienesSomosTitle">Quienes somos...</string>
    <string name="tePuedeInteresarTitle">Te invitamos a que leas...</string>
    <string name="contactanos">Contactanos!</string>
    <string name="seguinos">Seguinos!</string>
    <string name="mensaje_tags_combo_incompleto">Algunas de las etiquetas del combo están incompletas!</string>
    <string name="productos_combo">Vista preliminar</string>
    <string name="tag_incompleto">Debe completar la etiqueta con algún texto!</string>
    <string name="limpiarCarrito">Vaciar carrito</string>
    <string name="mensaje_vaciar_carrito">Está seguro de vaciar su Carrito?</string>
    <string name="carrito_vacio">Su Carrito ya se encuentra vacio!</string>
</resources>
