<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_body">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:background="@drawable/bg_body">

            <ImageView
                android:layout_width="320dp"
                android:layout_height="100dp"
                android:src="@drawable/store_logo"
                android:gravity="center_horizontal"
                />



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_turquesa"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/informacion_personal_title"
                android:textSize="15sp"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@color/color_blanco"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="12sp"
                        android:textColor="@color/color_gris_oscuro"
                        android:fontFamily="sans-serif"
                        android:text="@string/nombre"
                        android:textStyle="bold"
                        android:background="@android:color/white"/>

                    <EditText
                        android:id="@+id/entryNombre"
                        android:layout_width="225dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="5dp"
                        android:paddingStart="5dp"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@color/color_gris_muy_claro"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:maxLength="80"
                        android:background="@android:color/white"
                        android:textSize="14sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal"
                    android:background="@color/color_blanco"
                    android:gravity="center_vertical|clip_vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="12sp"
                        android:textColor="@color/color_gris_oscuro"
                        android:fontFamily="sans-serif"
                        android:text="@string/apellido"
                        android:textStyle="bold"
                        android:background="@android:color/white"/>

                    <EditText
                        android:id="@+id/entryApellido"
                        android:layout_width="145dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="5dp"
                        android:paddingStart="5dp"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@color/color_gris_muy_claro"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:importantForAutofill="no"
                        android:background="@android:color/white"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:orientation="horizontal"
                    android:background="@color/color_blanco"
                    android:gravity="center_vertical|clip_vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="12sp"
                        android:textColor="@color/color_gris_oscuro"
                        android:fontFamily="sans-serif"
                        android:text="@string/email"
                        android:textStyle="bold"
                        android:background="@android:color/white"/>

                    <EditText
                        android:id="@+id/entryEmail"
                        android:layout_width="145dp"
                        android:layout_height="27dp"
                        android:layout_marginStart="5dp"
                        android:paddingStart="5dp"
                        android:textColor="@android:color/black"
                        android:backgroundTint="@color/color_gris_muy_claro"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        android:maxLength="30"
                        android:importantForAutofill="no"
                        android:background="@android:color/white"/>

                </LinearLayout>
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/opciones_sexo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_masculino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:checked="true"
                        android:text="@string/masculino" />

                    <RadioButton
                        android:id="@+id/radio_femenino"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/femenino" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_turquesa"
                android:gravity="left"
                android:textStyle="bold"
                android:text="@string/direccion_title"
                android:textSize="15sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="5dp"
                android:background="@drawable/custom_line" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@color/color_blanco"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:textColor="@color/color_gris_oscuro"
                    android:fontFamily="sans-serif"
                    android:text="@string/direccion"
                    android:textStyle="bold"
                    android:background="@android:color/white"/>

                <EditText
                    android:id="@+id/entryDireccion"
                    android:layout_width="225dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@android:color/black"
                    android:backgroundTint="@color/color_gris_muy_claro"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="80"
                    android:background="@android:color/white"
                    android:textSize="14sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:background="@color/color_blanco"
                android:gravity="center_vertical|clip_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:textColor="@color/color_gris_oscuro"
                    android:fontFamily="sans-serif"
                    android:text="@string/barrio"
                    android:textStyle="bold"
                    android:background="@android:color/white"/>

                <EditText
                    android:id="@+id/entryBarrio"
                    android:layout_width="145dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@android:color/black"
                    android:backgroundTint="@color/color_gris_muy_claro"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:importantForAutofill="no"
                    android:background="@android:color/white"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:orientation="horizontal"
                android:background="@color/color_blanco"
                android:gravity="center_vertical|clip_vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="12sp"
                    android:textColor="@color/color_gris_oscuro"
                    android:fontFamily="sans-serif"
                    android:text="@string/codigo_postal"
                    android:textStyle="bold"
                    android:background="@android:color/white"/>

                <EditText
                    android:id="@+id/entryCodigoPostal"
                    android:layout_width="145dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="5dp"
                    android:paddingStart="5dp"
                    android:textColor="@android:color/black"
                    android:backgroundTint="@color/color_gris_muy_claro"
                    android:textSize="14sp"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:importantForAutofill="no"
                    android:background="@android:color/white"/>

            </LinearLayout>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="12dp"
                >

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/cancelar"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:padding="3dp"
                    android:background="@drawable/custom_button"
                    android:textColor="@android:color/holo_red_dark"
                    android:layout_marginEnd="20dp"
                   />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="wrap_content"
                    android:text="@string/loginLabel"
                    android:layout_height="30dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textSize="15dp"
                    android:padding="3dp"
                    android:textStyle="bold"
                    android:background="@drawable/custom_button"
                    android:textColor="@android:color/holo_red_dark"


                    />



            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

