<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg_body"
    android:layout_marginBottom="20dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

        <ImageView
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:src="@drawable/store_logo"
            android:gravity="center_horizontal"
            />



        <TextView
            android:id="@+id/textWellcomeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_gris_oscuro"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            android:fontFamily="sans-serif-smallcaps"
            android:background="@android:color/white"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="15dp"
            android:background="@drawable/custom_line" />



        <TextView
            android:id="@+id/textEnvioDevoluciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"
            android:layout_margin="15dp"
            android:text="@string/envio_devoluciones"
            android:fontFamily="sans-serif"
            android:background="@android:color/white"
            />

        <TextView
            android:id="@+id/textPoliticaPrivacidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"
            android:layout_margin="15dp"
            android:text="@string/politica_privacidad"
            android:fontFamily="sans-serif"
            android:background="@android:color/white"
            />

        <TextView
            android:id="@+id/textCondicionesUso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:textSize="17sp"
            android:layout_margin="15dp"
            android:text="@string/condiciones_uso"
            android:fontFamily="sans-serif"
            android:background="@android:color/white"
            />



        </LinearLayout>

    </ScrollView>



</LinearLayout>